--- a/arch/arm/boot/dts/imx6m300-dl.dtsi
+++ b/arch/arm/boot/dts/imx6m300-dl.dtsi
@@ -163,7 +163,8 @@
 			};
 			/*
 			 *	Electronic Paper Device Controller (EPDC)
-			 */
+			 *	Not used in M300
+			 *
 			epdc: epdc@020f4000 {
 				compatible = "fsl,imx6dl-epdc";
 				reg = <0x020f4000 0x4000>;
@@ -172,6 +173,7 @@
 				clock-names = "epdc_axi", "epdc_pix";
 				status = "disabled";
 			};
+			 */
 			/*
 			 *	LCD Interface (LCDIF)
 			 */
@@ -183,8 +185,9 @@
 
 		aips2: aips-bus@02100000 {
 			/*
-			 *	Mobile Industry Processor Interface (MIPI) Display Interface (DSI)
-			 */
+			 *	Mobile Industry Processor Interface (MIPI) Dispalay Interface (DSI)
+			 * 	Not used in M300
+			 *
 			mipi_dsi: mipi@021e0000 {
 				compatible = "fsl,imx6dl-mipi-dsi";
 				reg = <0x021e0000 0x4000>;
@@ -194,6 +197,7 @@
 				clock-names = "mipi_pllref_clk", "mipi_cfg_clk";
 				status = "disabled";
 			};
+			 */
 
 			i2c4: i2c@021f8000 {
 				#address-cells = <1>;
@@ -201,12 +205,15 @@
 				compatible = "fsl,imx1-i2c";
 				reg = <0x021f8000 0x4000>;
 				interrupts = <0 35 0x04>;
-				status = "okay";
+				status = "disabled";
 			};
 		};
 	};
 };
 
+/*
+ * IOMUXC Settings for EPDC - Not used in M300
+ *
 &iomuxc {
 	epdc {
 		pinctrl_epdc_0: epdcgrp-0 {
@@ -235,3 +242,4 @@
 		};
 	};
 };
+ */
