--- a/arch/arm/boot/dts/imx6m300-common.dtsi
+++ b/arch/arm/boot/dts/imx6m300-common.dtsi
@@ -5,29 +5,49 @@
  * it under the terms of the GNU General Public License version 2 as
  * published by the Free Software Foundation.
  */
+
 /*
+ *	EPDC (Electronic Paper Display Controller) - not available on M300
+ *
 &epdc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_epdc_0>;
 	V3P3-supply = <&V3P3_reg>;
 	VCOM-supply = <&VCOM_reg>;
 	DISPLAY-supply = <&DISPLAY_reg>;
-	status = "okay";
+	status = "disabled";
 };
-*/
+ */
+
 &ldb {
 	ipu_id = <0>;
 	sec_ipu_id = <0>;
 };
 
+//
+//	LVDS 7" (800x480) Disabled by default on M300
+//
 &mxcfb1 {
-	status = "okay";
+	status = "disabled";
 };
 
+//
+//	HDMI - not available on M300
+//
 &mxcfb2 {
+	status = "disabled";
+};
+
+//
+//	Assume 4.3" parallel RGB as default on M300
+//
+&mxcfb3 {
 	status = "okay";
 };
 
+//
+//	Pixel Pipeline - needs to be enabled for graphics output
+//
 &pxp {
 	status = "okay";
 };
